src/scss/style.scss
@import '_variables';

@font-face{
   font-family: 'Myria-Pro', 'MyriadArabic';
   src: url('../fonts/MyriadProRegular.ttf'),('../fonts/MyriadArabic-Regular.otf');
}

body{
    font-family: 'Myria-Pro', 'MyriadArabic',Georgia, 'Times New Roman', Times, serif;
}
body>.container-fluid{
    padding-left: 0;
    padding-right: 0;
    overflow: hidden;
}
.custom-navbar {
    margin-bottom: 80px;
    background: transparent;
    border: none;
    padding-top: 44px;
   position: relative;
}
#custom-right>li>a{
    margin-left: 47px;
}
.btn-app{
    font-family: 'MyriadArabic';
    font-size: 16px;
    color: $primary-color;
    background-color: $bg-button;
    border: 1px solid  $bg-button;
    border-radius: 50px;
    cursor: pointer;
    transition-property: color,background-color;
    transition-duration: 0.3s;
}
#custom-left .btn-app{
    padding: 18px 33px 18px 18px;
    margin-left: 50px;
}
.btn-app > span{
    padding-left: 22px;
}

.navbar-default .navbar-nav > li > a{
    
    font-size: 16px;
    color: $second-color;
    transition-property: color;
    transition-duration: 0.3s;
    
}

.btn-app:hover, .btn-app:focus, .btn-app:active, .btn-app:focus:active{
    color: $primary-color;
    background-color: $bg-button-dark;
}

.header {
    background-image: url(../images/HBg.jpg);
    background-position: center center;
    background-size: cover;
    height: 1000px;
    min-width: 100%;
    z-index: -3;
    position: relative;
    
}

.header .overlay {
    background: rgba(244,244,245,0.40);
    height: 1000px;
    z-index: -2;
}

.brand{
    
    position: absolute;
    left:calc(50% - 70px);
    bottom: 28%;
    display: block;
    
}
#help{
    color: rgba(27,28,30,0.4);
}
h1{
    font-family: 'Myria-Pro';
    font-size: 62px;
    color: $second-color;
    margin-bottom: 34px;
}
.p-header{
    font-family: 'MyriadArabic';
    font-size: 20px;
    line-height: 1.75;
    color:$p-color;
    width: 786px;
    position: absolute;
    left:calc(50% - 393px);
    
    
}

.custom-btn{
    font-family: 'MyriadArabic';
    font-size: 16px;
    color: $second-color;
    background-color: transparent;
    border-radius: 50px;
    border-color: rgba(38,39,45,0.10);
    

}
.video.custom-btn{
    padding-top: 20px;
    padding-bottom: 20px;
    padding-right: 77px;
    margin-top: 120px;
    margin-bottom: 55px;
    position: relative;
    left: 10%;
}
.custom-btn>i.fa{
    margin-right: 15px;
    margin-left: 50px;
}
.images>img{
    z-index: -1;
}

.feature1{
    
    background-color: $primary-color;
    padding-left: 225px;
    padding-right: 225px;
    padding-top: 122px;
    padding-bottom: 1px;
    
}
hr.hr{
    border-bottom: 1px solid rgba($color: #26272d, $alpha: 0.05);
    width: 1170px;
    margin-top: 145px;
    margin-bottom: 42px;
}

.custom-heading{
     font-family: 'Myria-Pro';
    font-size: 26px;
    color: $second-color;
    margin-top: 45px;
    margin-bottom: 50px;
}
.paragraph{
    font-family:'MyriadArabic';
    font-size: 18px;
    line-height: 2;
    color: $p-color;
    max-width: 489px;
}
.column>p.paragraph:first-of-type{
    margin-bottom: 40px;
}

.r-margin{
    margin-left: 0;
    margin-right: 0;
}
.feature2{
    background-color: $primary-color;
    padding-right: 215px;
    position: relative;
}
.heading2{
    font-size: 42px;
    margin-top: 224px;
    max-width: 486px;
    line-height: 1.5;
}

.passcode{
    margin-top: 135px;
    position: relative;
    left: calc(50% - 394px);
}
.m-passcode>img{
    margin-top: 86px;
    position: relative;
    left: 28%;
   
}
.passcode .btn-app{
    padding: 18px 26px 16px 19px;
    margin-left: 20px;
}
.passcode .btn-app >span{
    padding-left: 77px;
}

.passcode .custom-btn{
    padding: 18px 44px 16px 44px;
    
}
.passcode .custom-btn:hover,.passcode .custom-btn:focus, .passcode .custom-btn:active, .passcode .custom-btn:focus:active{
color: $primary-color;
    background-color: $bg-button;
    border: 1px solid  $bg-button;
    transition-property: color,background-color;
    transition-duration: 0.3s;
}
.feature3{
    background-color: $primary-color;
    padding-top: 207px;
    padding-bottom: 198px;
}


.feature3  img{
    position: relative;
    left: 9%;
}

.feature3  .column{
    padding-right: 75px;
}

.feature3 .heading2{
    margin-top: 0;
}
.p-small{
    font-family: 'MyriadArabic';
    margin-top: 100px;
    margin-left: 31%;
    color: $second-color;

}
ul.list-inline.text-right{
    margin-left: 28%;
    margin-top: 31px;
}
.feature4{
    background-color: $third-color;
    position: relative;
}
.feature4 .heading2{
    margin-top: 142px;
    max-width: 100%;
}
.feature4 .r-margin .col-xs-12{
    position: relative;
}
hr.sm-hr{
    border-top: 2px solid $bg-button;
    width: 50px;
    margin-top: 48px;
    margin-bottom: 46px;
}
h6.h-small{
    color: $p-color;
    font-family: 'MyriadArabic';
    margin-bottom: 45px;
}
.landing-screen {
    
   position: relative;
   
}
img.L-S4{
    position: relative;
    left: 6%;
}

img.L-S3 {
    position: relative;
    left: 26%;
}

img.L-S {
    position: relative;
    left: 44%;
}

img.L-S1 {
    position: absolute;
    top: 10%;
    right: 81.1%;
}

img.L-S2 {
    position: absolute;
    top: 10%;
    left: 13%;
}

.GitApp{
    background-color: $third-color;
    position: relative;
    padding-bottom: 131px;
}

.GitApp .custom-heading{
    font-size: 42px;
}
.GitApp  h6.h-small:first-child {
    color: rgba($h-color,0.50);
}
.GitApp  h6.h-small:last-of-type {
    color: rgba($h-color,0.30);
}
input.invite {
    font-family: 'MyriadArabic';
    font-size: 16px;
    background-color: rgba($third-color,0.20);
    border-radius: 25px;
    border: 1px solid $brder-color;
    width: 502px;
    height: 50px;
    line-height: 50px;
    margin-bottom: 69px;
}
button.btn.Form-submit {
    font-family: 'MyriadArabic';
    font-size: 16px;
    color: $primary-color;
    background-color: $g-color;
    border-radius: 21px;
    width: 164px;
    height: 42px;
    padding-right: 31px;
    padding-left: 24px;
    position: absolute;
    left: 552px;
    bottom: 140px;
}

.Form-submit >span{
    padding-left: 42px;
}
label#email-error {
    position: absolute;
    bottom: 30%;
    left: 45%;
    color: $g-color;
}
.btn-app2{
    font-family: 'MyriadArabic';
    font-size: 23px;
    color: $primary-color;
    background-color: #131315;
    border-radius: 50px;
    padding-top: 15px;
    padding-bottom: 12px;
    padding-right: 27px;
    padding-left: 71px;
    position: absolute;
    left:calc(50% - 122px);
    display: block;
    
    
}
.m-r{
    line-height: 25px;
    display: inline-block;
    margin-right: 18px;
    text-align: right;
}
.btn-app2 .d-f{
    font-size:12px;
    
}

i.fa.fa-apple.fa-2x {
    
    position: relative;
   bottom: 4px;
}
//customer section
.customers{
    background-color: $primary-color;
    position: relative;
}
#carousel-customers {
    padding-top: 132px;
    padding-bottom: 128px ;
   
    
}
#carousel-customers .carousel-control {
    background: none;
    color: rgba($controller,0.20);
    font-size: 2.3em;
    text-shadow: none;
    margin-top: 175px;
}
#carousel-customers .carousel-control.left {
    right: -60px;
}
#carousel-customers .carousel-control.right {
    left: -60px;
}
#carousel-customers .carousel-indicators {
    position: relative;
    margin-bottom: 75px;

}
#carousel-customers .carousel-indicators li {
    width: 112px;
    height: 112px;
    cursor: pointer;
    border: none;
    border-radius: 50px;
    opacity: 0.4;
    overflow: hidden;
    transition: all 0.4s;
}

#carousel-customers .carousel-indicators li:nth-child(2){
    margin-right: 130px;
    margin-left: 130px;
}

#carousel-customers .carousel-indicators .active {
    background: #333333;
    width: 144px;
    height: 144px;
    border-radius: 100px;
    opacity: 1;
    overflow: hidden;
}

.h1-customer{
    font-size: 32px;
    color: $second-color;
    margin-bottom: 56px;
}

.p-customer{
    max-width: 100%;
    margin-bottom: 63px;
}

.rating .active{
    color: #f2bc3b;
}

.carousel-p .p-small{
    margin-left: 0;
    margin-top: 72px;
    margin-bottom: 0;
}
//end customer section
//plan section
.plan{
    background-color: $bg-color;
    padding-top: 160px;
    position: relative;
    z-index: 0;
}
.switch1
 {  max-width: 215px;
    border: 1px solid $border2;
    border-radius: 25px;
    background-color: rgba($color:#3b55e6, $alpha: 0.015);
     margin-top: 22px;
     margin-bottom: 77px; 
    }
.switch2 > span, .switch-toggle > span 
{  color: #000000; 
}
.switch2 span span, .switch2 label, .switch-toggle span span, .switch-toggle label 
{  color: #2b2b2b; 
}

.switch-toggle a, 
.switch2 span span 
{ display: none; }

.switch2 
{ display: block; 
    height: 42px; 
    position: relative; 
    overflow: visible; 
    padding: 0px; 
    margin-left:0px; }
.switch2 * 
{ box-sizing: border-box; }
.switch2 a { 
    display: block; 
    transition: all 0.3s ease-out 0s; }

.switch2 label, 
.switch2 > span 
{ line-height: 30px; 
    vertical-align: middle;}

.switch2 label {
    font-weight: 700; 
    margin-bottom: px; 
    max-width: 100%;
}

.switch2 input { 
    position: absolute; 
    opacity: 0; z-index: 5; 
}
.switch2 input:checked ~ a {
     right: 2%; 
    }
.switch2 > span { 
    position: absolute; 
    left: -100px; 
    width: 100%; 
    margin: 0px; 
    padding-right: 100px; 
    text-align: left; 
}
.switch2 > span span { 
    font-family: 'MyriadArabic';
    color: $controller;
    font-size: 16px;
    position: absolute; 
    top: 6px; 
    left: 0px; 
    z-index: 5; 
    display: block; 
    width: 50%; 
    margin-left: 100px; 
    text-align: center; }
.switch2 > span span:last-child { 
    font-family: 'MyriadArabic';
    font-size: 16px;
    color:rgba($controller,0.40);
    left: 50%; 
}
.switch2 a { 
    background-color: $primary-color;
    border:none;
    border-radius: 25px;
    position: absolute; 
    right: 49%; 
    top: 2.5px;
    z-index: 4; 
    display: block; 
    width: 50%; 
    height: 100%; 
    padding: 0px; 
    box-shadow: 5px 5px 30px 0px rgba(61, 61, 62, 0.15);
}

.switch2 a:hover{
    background-color:$bg-color;
    border:none;
    transition-property: color,background-color;
    transition-duration: 0.3s;

}
.plan .custom-heading{
    font-size: 42px;
    margin-bottom: 73px;
    margin-top: 49px;
}
.plan-p{
    font-size: 20px;
    margin-bottom: 80px;
    max-width: 100%;
}
.p-choose{
    font-family: 'MyriadArabic';
    font-size: 14px;
    color: $p-color;
    margin-bottom: 246px;

}
.plan-price{
    background-color: $primary-color;
    border-radius: 10px;
    width:340px;
    //height: 550px;

}
.plan-price h1{
    font-size: 32px;
    margin-bottom: 31px;
    padding-top: 62px;
}
button.price{
    font-family: 'MyriadArabic';
    font-size: 11px;
    color: $p-color;
    border: 1px solid #d4d4d5;
    border-radius: 25px;
    padding: 10px 20px;
    cursor: initial;
    margin-bottom: 56px;
    background-color: transparent;
}
.plan-price h2{
    font-size: 20px;
}
.listed{
    font-family: 'MyriadArabic';
    font-size: 16px;
    color: $controller;
    line-height: 2;
    margin-bottom: 92px;
}
i.fa.fa-check{
    color: $g-color;
    margin-left: 9px;
}
.plan-price .btn-app{
    margin-bottom: 70px;
    width: 212px;
    height: 42px;
}
.Pro{
    background-color: #ebebed;
    height: 550px;
    position: relative;
    left: -35%;
    margin-top: 23%;
    z-index: -1;
}
.Pro .listed{
    margin-bottom: 50px;
}
.Pro h1{
    padding-top: 42px;
}
.starter{
    z-index: 1;
    box-shadow: -10px 10px 23px 0px rgba(61, 61, 62, 0.15);
}
// end plan section

// start subscribe section
.subscribe{
position: relative;
}

.subscribe button.btn.Form-submit{
    left: 324px;
    bottom: 177px;
}
.subscribe input.invite{
padding-right: 17px;
border-color: $border3;
color: $controller;
}

.subscribe .p-choose{
    margin-bottom: 85px;
}

// end subscribe section

